# truepositive-assistant

./: Cargo.toml  Dockerfile  openapi.json
src/: bot.rs  commands.rs  errors.rs  main.rs  models.rs  opts.rs  states.rs  yt_oauth.rs
templates/: auth.html  auth2.html  issues_list.md  new_issue.md  start.md
