[package]
name = "truepositive-assistant"
version = "0.1.0"
authors = ["Vladislav Bortnikov <bortnikov.vladislav@e-sakha.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
telegram-bot = { version = "0.7", features=["openssl"] }
tokio = { version = "0.2", features = ["fs"] }
futures = "0.3"
hyper = "0.13"
hyper-tls = "0.4"
hyper-socks2 = "0.4.3"
url = "2.1.1"
structopt = "0.3.15"
serde_json = "1.0.39"
serde = "1.0.39"
lazy_static = "1.4.0"
lru = "0.5.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
error-chain = "0.12.2"

[dependencies.tera]
version = "1"
default-features = false

[dependencies.youtrack-rs]
version = "0.1.1"
default-features = false
features = ["rust-native-tls"]

[dev-dependencies]
tokio = { version = "0.2", features = ["macros"] }
