[package]
name = "truepositive-assistant"
version = "0.2.2"
authors = ["Vladislav Bortnikov <bortnikov.vladislav@e-sakha.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
telegram-bot = { version = "0.7", default-features = false, features=["rustls"] }
tokio = { version = "0.2", features = ["rt-core", "macros", "rt-util"] }
futures = "0.3"
hyper = "0.13"
hyper-rustls =  "0.19"
hyper-socks2 = { version = "0.4", default-features = false, features = ["rustls"] }
url = "2.1"
structopt = "0.3"
serde_json = "1.0"
serde = "1.0"
lazy_static = "1.4"
lru = "0.5"
uuid = { version = "0.8", features = ["serde", "v4"] }
error-chain = "0.12"
actix-web = "2.0"
actix-rt = "1.0"
oauth2 = { git = "https://github.com/ramosbugs/oauth2-rs", branch = "main" }
emojicons = "1.0"
log = "0.4"
env_logger = "0.7"
ttl_cache = "0.5"
machine = "^0.3"
redis = "0.16"

[dependencies.tera]
version = "1"
default-features = false

[dependencies.youtrack-rs]
version = "0.2"
default-features = false
features = ["rustls"]
git = "https://github.com/d1ff/youtrack-rs"

[profile.release]
lto = true
codegen-units = 1
